fix(page and component alignment issues to reponsive mode): alignment issues to responsive

--- a/src/app/modules/cardlist/cardlist.component.scss
+++ b/src/app/modules/cardlist/cardlist.component.scss
@@ -33,6 +33,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3e2c7', end
     display: flex;
     margin-bottom: 10px;
     padding: 10px;
+    
+}
+.list-group {
+  overflow-y: scroll;
+    max-height: 80vh;
+    -webkit-overflow-scrolling: touch;
 }
 
 .pos-col-1 {
@@ -57,10 +63,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3e2c7', end
     background-color: #f6f3ef;
     word-break: break-all;
   }
+  
 
   @media only screen and (max-width: 600px) {
 
-
+    .list-group {
+      overflow-y: scroll !important;
+        max-height: 70vh !important;
+        -webkit-overflow-scrolling: touch;
+    }
 
  }
   
