--- a/src/app/modules/contact/contact.component.scss
+++ b/src/app/modules/contact/contact.component.scss
@@ -13,3 +13,18 @@
     text-align: right;
     padding-top: 15px;
 }
+.areacode {
+    position: absolute;
+    bottom: 2px;
+}
+.form-item-custom {
+    padding-left: 25%;
+    padding-bottom: 10px;
+}
+
+.ui-dropdown {
+
+    min-width: 0px !important;
+}
+
+
